force-app/main/default/objects/Campaign/fields/ABM__c.field-meta.xml
<CustomField>
    <fullName>ABM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of GTMS-25323</description>
    <label>ABM</label>
    <type>Checkbox</type>
</CustomField>