force-app/main/default/objects/Campaign/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>As per GTMS-3389 Jira the field label ahs been changed from &quot;Business Unit&quot; to &quot;Product Line Focus&quot;</description>
    <label>Product Line Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet</fullName>
                <default>true</default>
                <label>Fleet</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Sites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>