force-app/main/default/objects/Campaign/fields/Campaign_Name_without_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_without_Iteration__c</fullName>
    <formula>IF(FIND(&quot;-+-&quot;, Name) = 0, Name,TRIM(LEFT(Name, FIND(&quot; -+- &quot;, Name))))</formula>
    <label>Campaign Name (without Iteration)</label>
    <type>Text</type>
</CustomField>