force-app/main/default/objects/Campaign/fields/Email_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a campaign by the Marketing team (e.g., email responders, webinar attendees, etc.). Field used for tracking and workflow prioritization purposes.</description>
    <label>Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>