force-app/main/default/objects/Campaign/fields/Growth_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Growth_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a campaign designed by Growth team. Field used for tracking and workflow prioritization purposes.</description>
    <label>Growth/Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>