force-app/main/default/objects/Campaign/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <label>Iteration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>