force-app/main/default/objects/Campaign/fields/Run_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Run_Round_Robin__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose whether campaign members of this campaign will go through round robin by default</description>
    <label>Run Round Robin</label>
    <type>Checkbox</type>
</CustomField>