force-app/main/default/objects/Campaign/fields/Targeted_Segments__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Segments__c</fullName>
    <label>Targeted Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CML</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>All_segments</fullName>
                <default>true</default>
                <label>All Segments</label>
            </value>
            <value>
                <fullName>SMB</fullName>
                <isActive>false</isActive>
                <label>SMB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>