force-app/main/default/objects/Campaign/fields/Theme_Context__c.field-meta.xml
<CustomField>
    <fullName>Theme_Context__c</fullName>
    <label>Theme Context</label>
    <type>TextArea</type>
</CustomField>