force-app/main/default/objects/Campaign/listViews/AllPlanned.listView-meta.xml
<ListView>
    <fullName>AllPlanned</fullName>
    <booleanFilter>1 AND 5 and 6 and (2 or 3 or 4)</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>contains</operation>
        <value>Campaign - Content Download,Campaign - Referral Program</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>contains</operation>
        <value>Campaign - Thematic Form,Campaign - Webinar,Campaign - Mailer</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>contains</operation>
        <value>Event - Tradeshow,Event - Roadshow,Event - Internal</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notContain</operation>
        <value>Master,Parent</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2019</value>
    </filters>
    <label>2.0-All Planned Campaigns</label>
    <sharedTo>
        <role>Management</role>
    </sharedTo>
</ListView>