force-app/main/default/objects/Campaign/listViews/Customer_Summit_Dashvoard.listView-meta.xml
<ListView>
    <fullName>Customer_Summit_Dashvoard</fullName>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>Event_Campaign__c</columns>
    <columns>Email_Campaign__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Event - Customer Summit</value>
    </filters>
    <label>Customer Summit Dashboard</label>
    <language>en_US</language>
</ListView>