force-app/main/default/objects/Campaign/listViews/Planned_Events_and_webinars.listView-meta.xml
<ListView>
    <fullName>Planned_Events_and_webinars</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>contains</operation>
        <value>Event,webinar</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2019 12:00 AM</value>
    </filters>
    <label>2.1-Planned Events and webinars</label>
    <sharedTo>
        <role>Management</role>
    </sharedTo>
</ListView>